# Evil-Inference-Code

./: .gitignore  mingru_fixes_summary.md  read_bin_keys.py
Auron/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_infer.py
Auron/ouro/: __init__.py  cli.py  config.py  generate.py  model.py
blaurel/: README.md  comp.txt  train_ff.py  (+3 more)
rust/: Cargo.toml  config.toml  linear_burn_report.md  plan_cortexia.md  plan_transformer.md  xlstm - Acceso directo.lnk
rust/LLM_D3/: data.py  show.py
rust/MSA/: .gitignore  .gitmodules  README.md
rust/MSA/python/fmha_sm100/: __init__.py  bench_utils.py  sparse.py
rust/MSA/python/fmha_sm100/csrc/: fmha_sm100_params.h  fmha_sm100_variant_run.cu.jinja  sparse_topk_select.cu
rust/MSA/python/fmha_sm100/cute/: .gitignore  Makefile  fp4_indexer_interface.py  sparse_index_utils.py  test_sparse_atten.py
rust/MSA/python/fmha_sm100/cute/src/common/: pack_gqa.py  seqlen_info.py  tile_scheduler.py  utils.py
rust/MSA/python/fmha_sm100/cute/src/sm100/: decode_schedule.py  fp4_indexer.py
rust/MSA/python/fmha_sm100/cute/src/sm100/fwd/: atten_fwd.py
rust/MSA/tests/integration/: test_proxy_kv_e2e.py  test_q_offset_override.py
rust/MSA/tests/regression/: test_correctness.py
rust/MSA/tests/smoke/: test_proxy_kv_smoke.py  test_sparse_topk_forced.py
rust/colab/: bitnet_chat_inference.ipynb  bitnet_chat_inference.py  bitnet_grouped_350m.ipynb  fix_notebook.py  patch_phase5.py  save_tokenizer.py  scratch_check.py
rust/mla/: MLA_CHANGES.md  attention.py  block.py  chat222.py  gen_mapping.py  mla_attention.py  model.py  pyproject.toml  sparse_mio2.py  sparse_mio3.py  test_compare.py  test_sparse_vs_dense.py  test_training_loss.py  train.py
rust/mla/LLM_D3-main/: eval.py
rust/mla/LLM_D3-main/LLM_D3-main/: analysis.py  fine_tune.py  test.py  train.py
rust/mla/docs/: mla_vs_llmd3_moe.md
rust/mla/nano-moe-mla-main/: FEATURES.md  LICENSE  data_prep.py  plot_loss.py  requirements.txt  run_all.sh  run_everything.sh
rust/mla/nano-moe-mla-main/docs/: blogpost-do-experts-specialize.md
rust/mla/nano-moe-mla-main/steps/: 03_block_model.py  06_routing_probe.py
rust/moe-mla/: MLA_CHANGES.md  inf-msa-moe.md  mla_attention.py  model.py  moe.py  moe_block.py  msa.md  plot.py  reporte_fix_moe.md  requirements.txt  resumen.md  test_compare - copia.py  test_compare.py  test_moe_mla.py  train.py
rust/moe-mla/LLM_D3-main/: LLM_2.py  README.md  check_params.py
rust/moe-mla/frontier-llm-techniques-2026-Q1/: .gitignore  README.md  bpe.py  mtp.py  muon.py  requirements.txt
rust/moe-mla/nano-moe-mla/: bpe_data.py
rust/moe-mla/nano-moe-mla/steps/: 01_moe.py  05_multidomain.py  07_ablation.py  09_stack_ablation.py
rust/nano-moe-mla/: .gitignore  README.md
rust/nano-moe-mla/steps/: 02_mla.py  04_train.py  08_kv_cache.py  README.md
rust/notebooks/: diagnose_file_deletion.ipynb
rust/python/: __init__.py  attention.py  block.py  cache_kv.py  chat_768.py  dataset.py  huggingface.py  model.py  test_load_768.py  test_tokenizer_compare.py  test_verify.py  train.py
rust/python - sparse/: attention.py  block.py  chat222.py  check_mapping.py  huggingface.py  load_rust.py  model.py  parameter.md  sparse.py  sparse_attn_mio.py  test_bench.py  test_compare.py  test_sparse_vs_dense.py  train.py
rust/python - sparse/MSA-main/: NOTICE  SECURITY.md
rust/python - sparse/MSA-main/benchmarks/: bench_sparse_attention_ops.py
rust/python - sparse/MSA-main/python/fmha_sm100/: api.py  jit.py  sparse_fmha_adapter.py
rust/python - sparse/MSA-main/python/fmha_sm100/csrc/: fmha_sm100_inst.jinja
rust/python - sparse/MSA-main/python/fmha_sm100/cute/: example.py  interface.py  requirements.txt  test_fp4_indexer.py
rust/python - sparse/MSA-main/scripts/: warmup_fmha_sm100.py
rust/python - sparse/MSA-main/tests/: conftest.py
rust/python - sparse/MSA-main/tests/integration/: test_mixed_split.py  test_onlyscore_pipeline.py  test_plan_correctness.py
rust/python - sparse/MSA-main/tests/regression/: test_sparse_attn.py
rust/python_rust/: __init__.py  attention.py  block.py  ffn.py  model.py  norm.py  rope.py  tokenizer.py  train.py  transformer_tpu.ipynb
rust/src/: lib.rs  main.rs
rust/src/blocks/: load_pytorch.rs  mod.rs
rust/src/blocks/bitlinear/: kernel.rs  layer.rs  mod.rs
rust/src/blocks/forward_forward/: mod.rs  pepita.rs
rust/src/blocks/kuantgrad/: adamw.rs  compress.rs  cuda_kuantgrad.rs  mod.rs
rust/src/blocks/minrnn/: mingru.rs  minlstm.rs  mod.rs
rust/src/blocks/slstm/: layer.rs
rust/src/blocks/trasformer/: attention.rs  feedforward.rs  heads.rs  layer.rs  mod.rs  rope.rs
rust/src/blocks/trasformer_bit/: bitnet_export.rs  cache.rs  hf_manager.rs  infer_bit.rs  layer.rs  mod.rs  model.rs  ops.rs  projections.rs
rust/src/blocks/turbokuant/: mod.rs
rust/test_data/: input_ids.npy  logits.npy  rust_token_ids.npy  text.npy  training_input_ids.npy  training_targets.npy
rust/test_python/: test_transformer_reference.py
rust/testbin_model/src/: main.rs  main_flex.rs  sequential.rs
rust/xorIA/: BENCHMARK_REPORT.md  BITLINEAR_INFERENCE_REPORT.md  BITNET_KERNEL_REPORT.md  KUANTGRAD_SPEC.md  LLAMA_CPP_TERNARY_BREAKDOWN.md  auto_train.rs  bitlinear_kv_example.py  comp.txt  cuda_gpu.md  large_chat.rs  large_chat_cuda.rs  mingruchat.rs  mingruchat_cuda.rs  minlstmchat.rs  mlstm_mingru_chat.rs  msltmchat (cuda).rs  msltmchat.rs  plan_cuda_kernel.md  slstmchat.rs  test_minlstm_parity.py  testlist.rs  transformer_chat.rs  transformer_chat_cuda.rs  transformer_quant_kv.rs  xoria_bit.rs  xoria_bit_cuda.rs  xoria_cuant.rs
rust/xorIA/bit_transformer/: main.rs  main_cuda.rs  model.rs
rust/xorIA/port/: tpu_xla.py
rust/xorIA/prisma_transformer/: BONSAI_1_7B_SPEC.md  GGUF_PRISMA_LAYOUT_NOTES.md  attention.py  bitnetfix.md  config.py  diagnose_gguf.py  final_diagnose.py  fix_embedding.md  hunt_tensors.py  inspect_gguf.py  layers.py  load_and_infer_bonsai.py  main.py  pure_bitwise_ternary.py  rrr.txt  test_mini.py  test_qwen_arch.py  transformer.py
rust/xorIA/transformer_bit2/: bitnet_export.rs  main.rs  main_cuda.rs  model.rs
(+108 files in other folders)
